# rnd.visual.OHTrack

./: .gitignore  README.md  export-model.py
best_ncnn_model/: metadata.yaml  model_ncnn.py
demo/linux/: CMakeLists.txt  detector_class_info.h  detector_yolo_inference.cpp  detector_yolo_inference.hpp  main.cpp
demo/linux/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
demo/linux/build2/DET/: Makefile  cmake_install.cmake
demo/linux/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  detection
demo/linux/build_test/CMakeScripts/: ReRunCMake.make
demo/linux/build_test/DET/: Makefile  cmake_install.cmake
demo/linux/build_test/DET/CMakeScripts/: ReRunCMake.make
demo/linux/build_test/DET/Detection.xcodeproj/: project.pbxproj
demo/linux/build_test/Debug/: detection
demo/linux/build_test/detection.xcodeproj/: project.pbxproj
demo/linux/build_test/detection.xcodeproj/project.xcworkspace/xcuserdata/3i-a1-2022-062.xcuserdatad/: UserInterfaceState.xcuserstate
demo/linux/build_test/detection.xcodeproj/xcuserdata/3i-a1-2022-062.xcuserdatad/xcschemes/: xcschememanagement.plist
detection/: CMakeLists.txt  bounding_box_saver.h  boxinfo.h  detector_class_info.h  utils.cpp  utils.h
models/custom/horse_only_yolo11s_2080ti_1_ver13_20250106_ncnn_model/: metadata.yaml  model_ncnn.py
models/pretrain/yolo11l_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
models/pretrain/yolo11s_ncnn_model/: metadata.yaml  model_ncnn.py
